--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -3,6 +3,7 @@
 search: false 
 --- 
 @charset "utf-8";
+@import "custom";
 
 @import "minimal-mistakes/skins/{{ site.minimal_mistakes_skin | default: 'default' }}"; // skin
 
