重新配置网站的 favicons 图标
1. 利用 https://realfavicongenerator.net/ 生成网站的 favicons
   图标链接<link/>;
2. 将其配置到 /_includes/head/custom.html 中.

--- a/_includes/head/custom.html
+++ b/_includes/head/custom.html
@@ -1,16 +1,25 @@
 <!-- start custom head snippets -->
 
 <!-- insert favicons. use https://realfavicongenerator.net/ -->
-<link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Noto+Serif+SC:wght@300;400;700&display=swap">
+<!-- 设置网站 favicons 图标-->
+<link rel="icon" type="image/png" href="/assets/favicons/favicon-96x96.png" sizes="96x96" />
+<link rel="icon" type="image/svg+xml" href="/assets/favicons/favicon.svg" />
+<link rel="shortcut icon" href="/assets/favicons/favicon.ico" />
+<link rel="apple-touch-icon" sizes="180x180" href="/assets/favicons/apple-touch-icon.png" />
+<meta name="apple-mobile-web-app-title" content="STiLE" />
+<link rel="manifest" href="/assets/favicons/site.webmanifest" />
+
+
+
+<!-- 引入字体 -->
 
 <!-- 引入思源宋体（Noto Serif SC） -->
 <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Noto+Serif+SC:wght@300;400;700&display=swap">
 
-<!-- 引入 霞鹜文楷（LXGW WenKai） -->
-<link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/lxgw/LxgwWenkai-Webfont@latest/style.css">
-
 <!-- 引入思源黑体（Noto Sans SC） -->
 <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Noto+Sans+SC:wght@300;400;700&display=swap">
 
+<!-- 引入 霞鹜文楷（LXGW WenKai） -->
+<link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/lxgw/LxgwWenkai-Webfont@latest/style.css">
 
 <!-- end custom head snippets -->
