为网站配置logo和明/暗模式切换的功能。
1. logo是直接在_config.yml文件中配置了logo选项；
2. 明/暗模式切换涉及了多处改动：1)
   _config.yml中增加了minimal_mistakes_skin_dark条目；2)
   _includes/head/custom.html 中创建了不同的link指向明/暗皮肤；3)
   _includes/masterhead.html 中在 <nav></nav> 标签中增加了控制按钮。

--- a/_includes/footer/custom.html
+++ b/_includes/footer/custom.html
@@ -1,5 +1,5 @@
 <!-- start custom footer snippets -->
-
+<!-- 配置网站知识共享许可协议 -->
 <div class="license-container">
     <a rel="license" href="https://creativecommons.org/licenses/by-nc-sa/4.0/deed.zh">
         <img class="license-icon" alt="CC 许可协议" src="/assets/images/by-nc-sa.png">
@@ -11,10 +11,5 @@
         </a>，除非另有声明。
     </p>
 </div>
-
-
-
-
-
 
 <!-- end custom footer snippets -->
