--- a/_sass/custom.scss
+++ b/_sass/custom.scss
@@ -1,4 +1,4 @@
-/* /_includes/footer/custom.html: 配置网站知识共享许可协议的样式*/
+/* 配置网站知识共享许可协议的样式(/_includes/footer/custom.html) */
 .license-container {
     text-align: center;
     /* 居中对齐 */
