--- a/_includes/head/custom.html
+++ b/_includes/head/custom.html
@@ -41,8 +41,8 @@
     }
 </script>
 
-<!-- Ref:
-TeX Input Processor Options:
+<!-- 
+Ref:TeX Input Processor Options:
 https://docs.mathjax.org/en/latest/options/input/tex.html -->
 <script>
     MathJax = {
