更改 jekyll minimal-mistakes 主题变量配置方式！
由之前的通过同位置文件覆盖的形式（_sass/minimal-mistakes/_variables.scss），改为通过在 assets/css/main.scss 文件中对要修改的变量进行单独配置。

--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -1,11 +1,21 @@
---- 
-# Only the main Sass file needs front matter (the dashes are enough)
-search: false 
---- 
-@charset "utf-8";
+--- # Only the main Sass file needs front matter (the dashes are enough) search: false --- @charset "utf-8";
+
 @import "custom";
 
 @import "minimal-mistakes/skins/{{ site.minimal_mistakes_skin | default: 'default' }}"; // skin
 
-@import "minimal-mistakes"; // main partials
+/* 配置一些个性化变量 */
+// 字体相关
+$serif: "Noto Sans SC", Georgia, Times, serif !default;
+$sans-serif: "Noto Sans SC", -apple-system, BlinkMacSystemFont, "Roboto", "Segoe UI",
+    "Helvetica Neue", "Lucida Grande", Arial, sans-serif !default;
+// 代码相关
+$code-background-color: #e9ecef !default;
+// FontAwesome 图标相关
+$wechat-color: #50B674 !default;
+$zhihu-color: #0084FF !default;
+$email-color: #2B6FD6 !default;
+$telegram-color: #0088CC !default;
+$coffee-color: #FFD700 !default;
 
+@import "minimal-mistakes"; // main partials
