--- a/_sass/minimal-mistakes.scss
+++ b/_sass/minimal-mistakes.scss
@@ -1,3 +1,17 @@
+/* 配置一些个性化变量 */
+// 字体相关
+$serif: "Noto Sans SC", Georgia, Times, serif;
+$sans-serif: "Noto Sans SC", -apple-system, BlinkMacSystemFont, "Roboto", "Segoe UI",
+    "Helvetica Neue", "Lucida Grande", Arial, sans-serif;
+// 代码相关
+$code-background-color: #e9ecef;
+// FontAwesome 图标相关
+$wechat-color: #50B674;
+$zhihu-color: #0084FF;
+$email-color: #2B6FD6;
+$telegram-color: #0088CC;
+$coffee-color: #FFD700;
+
 /* Copyright comment */
 @import "minimal-mistakes/copyright";
 
